--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,3 +4,49 @@ img {
   width: 100%;
   height: auto;
 }
+
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+ul {
+  width: 100%;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
+  li {
+    border-top: 1px solid #000;
+    padding: 80px;
+    font-size: 48px;
+    font-weight: bold;
+
+    &:last-child {
+      border-bottom: 1px solid #000;
+    }
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+}
+
+.follower {
+  width: 40%;
+  aspect-ratio: 3 / 2;
+  position: fixed;
+  pointer-events: none;
+  overflow: hidden;
+  opacity: 0;
+
+  &.is-active {
+    opacity: 1;
+  }
+}
+
+.follower-image {
+  object-fit: cover;
+}
