--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,197 @@
 @use './base.scss';
 
-img {
-  width: 100%;
-  height: auto;
+:root {
+  --main: #64c9cf;
+  --secondary: #fde49c;
+  --primary: #c32bad;
+  --accent: #ffb740;
+  --white: #df711b;
+  --black: #333;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  letter-spacing: 0.2em;
+  background: var(--main);
+  font-size: 16px;
+  line-height: 1.7;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.section {
+  width: 100vw;
+  padding: 120px 0;
+
+  &__inner {
+    width: 90%;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+}
+
+.title {
+  margin: 0;
+  text-align: center;
+  font-size: 48px;
+}
+
+.mv {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  background: var(--main);
+  color: #fff;
+
+  h1 {
+    text-align: center;
+    font-size: 64px;
+
+    .main-title {
+      display: flex;
+    }
+
+    .space {
+      margin-left: 0.4em;
+    }
+
+    .sub-title {
+      display: block;
+      margin-top: 24px;
+      font-size: 16px;
+    }
+  }
+
+  .scroll {
+    position: absolute;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    margin: auto;
+    width: 1px;
+    height: 20vh;
+    overflow: hidden;
+
+    &::before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 1px;
+      height: 4vh;
+      background: #fff;
+      animation: scroll 1.5s linear infinite;
+      z-index: 1;
+    }
+  }
+}
+
+@keyframes scroll {
+  0% {
+    transform: translate3d(0, -8vh, 0);
+  }
+  60% {
+    transform: translate3d(0, 16vh, 0);
+  }
+  100% {
+    transform: translate3d(0, 22vh, 0);
+  }
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.section2 {
+  background: var(--secondary);
+
+  .section__inner {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    gap: 20px;
+  }
+
+  .box {
+    aspect-ratio: 1 / 1;
+    background: var(--accent);
+  }
+}
+
+.section3 {
+  background: var(--black);
+
+  .section__inner {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 40px;
+  }
+
+  &__imagewrap {
+    position: relative;
+    aspect-ratio: 4 / 3;
+    overflow: hidden;
+
+    img {
+      position: absolute;
+      top: 0;
+      right: 0;
+      left: 0;
+      margin: auto;
+      width: 130%;
+    }
+  }
+}
+
+.section4 {
+  background: var(--black);
+
+  .section__inner {
+    position: relative;
+  }
+
+  &__fixedimage {
+    aspect-ratio: 16 / 9;
+    width: 80%;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate3d(-50%, 0, 0);
+    margin: auto;
+
+    img {
+      object-fit: cover;
+      object-position: center center;
+    }
+  }
+
+  &_content {
+    display: flex;
+    padding-top: 40%;
+    color: #fff;
+    font-size: 24px;
+
+    p {
+      width: 50%;
+      margin-left: auto;
+    }
+  }
 }
